machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

/// \brief Machine instance handle
/// \details cm_machine* is handle used from C api users
/// to pass the machine object when calling C api functions. Currently,
/// it is merely a pointer to internal C++ object that is  internally casted
/// back to original C++ machine type. On some obscure CPU arhitectures
/// where pointer size depend on types, this api might not work
typedef struct cm_machine_tag cm_machine; // NOLINT(modernize-use-using)
/// \brief Reads the value of the mtval register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mtval(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mtval register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mtval(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the misa register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_misa(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the misa register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_misa(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mie register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mie(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Reads the value of the mie register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mie(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mip register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mip(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Reads the value of the mip register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mip(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the medeleg register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_medeleg(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the medeleg register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_medeleg(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mideleg register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mideleg(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mideleg register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mideleg(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mcounteren register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mcounteren(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mcounteren register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mcounteren(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the stvec register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_stvec(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the stvec register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_stvec(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the sscratch register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_sscratch(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the sscratch register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_sscratch(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Deletes the error message
/// \param err_msg Pointer to error message received from some other function
/// \details This C API is meant to be used for various language bindings.
/// Many of them could not directly call C free function,
/// so this is a convenience function for cleanup of error messages
CM_API void cm_delete_cstring(const char *err_msg);