machine-bindings/cartesi-machine-sys/src/bindings.rs

extern "C" {
    #[doc = " \\brief Reads the value of the mtval register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mtval(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mtval register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mtval(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the misa register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_misa(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the misa register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_misa(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mie register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mie(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mie register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mie(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mip register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mip(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mip register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mip(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the medeleg register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_medeleg(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the medeleg register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_medeleg(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mideleg register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mideleg(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mideleg register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mideleg(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mcounteren register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mcounteren(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mcounteren register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mcounteren(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the stvec register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_stvec(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the stvec register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_stvec(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the sscratch register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_sscratch(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the sscratch register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_sscratch(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
